fix up the gap between navbar and solution page

--- a/src/components/solution/solution.module.css
+++ b/src/components/solution/solution.module.css
@@ -1,4 +1,5 @@
 .solution {
+  padding-top: 4em;
   user-select: none;
 }
 
@@ -7,7 +8,7 @@
 }
 
 .itTitle {
-  padding: 5em;
+  padding: 2em;
   padding-bottom: 1.5em;
 }
 .solutionText {
